--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,37 @@
+/* This section is to style all divs boxes of webpage*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
-body {
-    background-color: #d9dcd6;
+/* This will style the Navigation Anchor points*/
+a {
+    color: #ffffff;
+    text-decoration: none;
 }
-
+/* This will style the herp image*/
+.hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
+}
+/* The below will style th eheader section including the Nav, h1, .seo and ul*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
 .header h1 .seo {
     color: #d9dcd6;
 }
-
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -31,20 +39,15 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
 .header nav ul {
     list-style-type: none;
 }
-
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
+
 
 p {
     font-size: 16px;
