--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,37 +47,26 @@ a {
     margin-left: 25px;
 }
 
-
-
+/* Styling body of the webpage*/
+body {
+    background-color: #d9dcd6;
+}
 p {
     font-size: 16px;
 }
-
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -88,7 +77,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+    
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
